--- a/app/src/App.css
+++ b/app/src/App.css
@@ -8,4 +8,5 @@ body {
   color: #000000;
   background-color: #F3F3F3;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
 }/*# sourceMappingURL=App.css.map */
