--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -13,4 +13,5 @@ body{
     color: $primary-text-color;
     background-color: $background-color;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
 }
