--- a/app/src/components/Header/header.scss
+++ b/app/src/components/Header/header.scss
@@ -17,7 +17,7 @@
     
 
     h1 {
-        font-size: 36px;
+        font-size: 1.8em;
         font-weight: 600;
     }
 
@@ -30,7 +30,7 @@
 
     .search-input {
         border: none;
-        font-size: 20px;
+        font-size: 1em;
         outline: none;
         font-style: italic;
     }
