added home page table

--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -2,16 +2,18 @@
 @import './styles/mixins';
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
-body{
+body {
     color: $primary-text-color;
     background-color: $background-color;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
 }
