--- a/app/src/App.css
+++ b/app/src/App.css
@@ -4,9 +4,12 @@
   box-sizing: border-box;
 }
 
+* {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
 body {
   color: #000000;
   background-color: #F3F3F3;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
 }/*# sourceMappingURL=App.css.map */
