--- a/app/src/components/Home/home.scss
+++ b/app/src/components/Home/home.scss
@@ -1,8 +1,11 @@
+@import '../../styles/variables';
+
+
 .home {
     position: relative;
     padding-left: 172px;
     padding-right: 98px;
-    height: 100vh;
+    padding-bottom: 232px;
 }
 
 
@@ -28,6 +31,8 @@
 
 .home-table-container {
     margin-top: 61px;
+
+    margin-bottom: 42px;
 }
 
 
@@ -157,6 +162,50 @@
     opacity: 35%;
 }
 
-.status-toggle-icon{
+.status-toggle-icon {
     cursor: pointer;
+}
+
+
+.records-dropdown-icon {
+    cursor: pointer;
+}
+
+.records {
+    position: relative;
+    width: 200px;
+
+}
+
+
+.records-dropdown {
+    width: 100px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: -50px;
+    top: 40px;
+    animation: fade-in 0.3s;
+
+    @keyframes fade-in {
+        0% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+        }
+    }
+}
+
+
+.records-input {
+    cursor: pointer;
+    border: none;
+    font-size: 0.8em;
+    background-color: white;
+    padding: 5px;
+    border-bottom: 2px solid $background-color;
+    text-align: center;
 }
