--- a/app/src/components/Home/home.css
+++ b/app/src/components/Home/home.css
@@ -174,4 +174,35 @@
   padding: 5px;
   border-bottom: 2px solid #F3F3F3;
   text-align: center;
+}
+
+.records-pagination {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pagination {
+  margin-right: 28px;
+}
+
+.page {
+  margin-right: 17px;
+  text-decoration: none;
+  color: #000000;
+  font-weight: bold;
+  font-size: 0.8em;
+}
+
+.active {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
+  padding: 5px 10px;
+  border-radius: 4px;
+  background-color: #C6C6C6;
+}
+
+.page-direction {
+  font-weight: 300;
+}
+.page-direction:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=home.css.map */
