--- a/app/src/components/Home/home.scss
+++ b/app/src/components/Home/home.scss
@@ -21,7 +21,7 @@
     display: flex;
     justify-content: center;
     position: relative;
-    left: -16px;
+    left: -14px;
     top: -36px;
     cursor: pointer;
     text-decoration: none;
@@ -136,8 +136,12 @@
     height: 45px;
 }
 
-.settings-icon {
+.settings-icon-link{
     margin-right: 24px;
+
+}
+
+.settings-icon {
     cursor: pointer;
 
     &:hover {
