--- a/app/src/components/UserSetup/userSetup.scss
+++ b/app/src/components/UserSetup/userSetup.scss
@@ -1,6 +1,3 @@
-
-
-
 .settings-page-icon {
     width: 72px;
     height: 72px;
@@ -18,5 +15,41 @@
     cursor: pointer;
     text-decoration: none;
 
+
+}
+
+.user-setup-container {
+    .photo-section {
+        display: flex;
+        flex-direction: column;
+
+        .photo-icon-container {
+            position: relative;
+            width: fit-content;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+      
+
+        .photo-icon {
+            width: 210px;
+            height: 210px;
+            position: absolute;
+
+           
+        }
+
+        .photo-key-icon {
+            position: absolute;
+            background-color: #7E7EF1;
+            border-radius: 30px;
+            padding: 14px 26px;
+            right: -10px;
+            bottom: 10px;
+        }
+
+    }
 
 }
