added edit form on edit user page

--- a/app/src/components/Home/home.scss
+++ b/app/src/components/Home/home.scss
@@ -1,5 +1,5 @@
 @import '../../styles/variables';
-
+@import '../../styles/mixins';
 
 .home {
     position: relative;
@@ -136,9 +136,8 @@
     height: 45px;
 
     div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flexCenter;
+
     }
 
     .table-user-icon {
