--- a/app/src/components/UserSetup/userSetup.scss
+++ b/app/src/components/UserSetup/userSetup.scss
@@ -1,4 +1,14 @@
+@import '../../styles/mixins';
+
+.edit {
+    padding-left: 192px;
+    padding-right: 76px;
+    padding-bottom: 245px;
+}
+
+
 .settings-page-icon {
+    @include flexCenter;
     width: 72px;
     height: 72px;
     border-radius: 50%;
@@ -6,9 +16,6 @@
     background-color: #C6C6C6;
     font-size: 2.4em;
     font-weight: 300;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: relative;
     left: -14px;
     top: -36px;
@@ -19,26 +26,53 @@
 }
 
 .user-setup-container {
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+
     .photo-section {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        width: 232px;
+
 
         .photo-icon-container {
             position: relative;
             width: fit-content;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            @include flexCenter;
+
         }
 
-      
+        .photo-input {
+
+            margin-top: 14px;
+            color: transparent;
+            cursor: pointer;
+            width: 120px;
+
+            &::before {
+                content: 'UPLOAD A PHOTO';
+                color: #B0ACAC;
+                border: none;
+                font-size: 14px;
+                font-weight: 300;
+                background-color: transparent;
+                outline: none;
+                width: 100px;
+            }
+
+            &::-webkit-file-upload-button {
+                visibility: hidden;
+            }
+        }
 
         .photo-icon {
             width: 210px;
             height: 210px;
             position: absolute;
 
-           
+
         }
 
         .photo-key-icon {
@@ -46,10 +80,167 @@
             background-color: #7E7EF1;
             border-radius: 30px;
             padding: 14px 26px;
-            right: -10px;
-            bottom: 10px;
+            right: 0;
+            bottom: 16px;
+        }
+
+
+        h1 {
+            margin-top: 31px;
+            font-size: 2.4em;
+            font-weight: 600;
+            max-width: 232px;
+            word-wrap: break-word;
+            margin-bottom: 13px;
+        }
+
+        span {
+            font-size: 0.8em;
+            font-weight: 300;
+        }
+
+        .resend-invite-btn {
+            background-color: #7E7EF1;
+            color: #FFFFFF;
+            text-decoration: none;
+            border-radius: 100px;
+            padding: 18px 42px 20px 42px;
+            width: 209px;
+            height: 59px;
+            margin-top: 59px;
+            font-size: 0.8em;
+            box-shadow: 0px 3px 6px #00000029;
         }
 
     }
 
+
+
+    .details-section {
+
+        width: 332px;
+        position: relative;
+
+        h1 {
+            margin-bottom: 55px;
+            margin-right: 100px;
+        }
+
+        .details-status {
+            display: flex;
+            align-items: center;
+            justify-content: start;
+
+            img {
+                margin-right: 12px;
+            }
+
+            span {
+                font-size: 0.8em;
+            }
+        }
+
+        .edit-user-form {
+
+            margin-top: 69px;
+            margin-left: 53px;
+
+            input {
+                border: none;
+                border-bottom: 2px solid #C6C6C6;
+                background-color: transparent;
+                outline: none;
+                width: 100%;
+                padding-top: 5px;
+                padding-bottom: 5px;
+
+
+                &:focus~label,
+                &:not(:placeholder-shown)~label {
+                    color: #33A3DC;
+                    top: -25px;
+                }
+            }
+
+
+
+            .edit-form-container {
+                display: flex;
+                position: relative;
+                flex-direction: column;
+
+                margin-top: 48.5px;
+
+
+                div {
+                    width: 100%;
+                    position: relative;
+                    padding-left: 20px;
+                }
+
+
+                label {
+                    font-size: 0.8em;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    color: #C6C6C6;
+                    cursor: text;
+                    height: 1px;
+
+                }
+
+            }
+
+
+
+            .send-edit-input {
+                color: #979797;
+                background: #C6C6C6;
+                font-weight: 600;
+                width: 209px;
+                border-radius: 100px;
+                height: 59px;
+                padding: 18px 54px 20px 55px;
+                box-shadow: 0px 3px 6px #00000029;
+                cursor: pointer;
+            }
+
+            .validated-btn {
+                color: #FFFFFF;
+                background-color: #44A0D3;
+                padding: 18px 54px 20px 55px;
+                box-shadow: 0px 3px 6px #00000029;
+                border-radius: 100px;
+                width: 209px;
+                height: 59px;
+                font-size: 0.8em;
+                font-weight: 600;
+            }
+
+            .submit-edit-form-container {
+                display: flex;
+                align-items: center;
+                margin-top: 59px;
+                position: relative;
+            }
+
+            .edit-form-validation {
+                color: #F89797;
+                font-weight: 300;
+                width: 100px;
+                position: absolute;
+                right: -50px;
+            }
+
+            .validated {
+                color: #44D36A;
+            }
+        }
+
+    }
+
+    .permissions-section {
+        width: 40%;
+    }
 }
