--- a/app/src/components/UserSetup/userSetup.scss
+++ b/app/src/components/UserSetup/userSetup.scss
@@ -124,6 +124,8 @@
         h1 {
             margin-bottom: 55px;
             margin-right: 100px;
+            font-size: 1.8em;
+            font-weight: 600;
         }
 
         .details-status {
@@ -133,6 +135,7 @@
 
             img {
                 margin-right: 12px;
+                cursor: pointer;
             }
 
             span {
@@ -221,7 +224,7 @@
             .submit-edit-form-container {
                 display: flex;
                 align-items: center;
-                margin-top: 59px;
+                margin-top: 130px;
                 position: relative;
             }
 
@@ -238,9 +241,113 @@
             }
         }
 
+
+
     }
 
     .permissions-section {
-        width: 40%;
+        width: 30%;
+
+        .permissions-heading-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 54px;
+
+            h1 {
+                font-size: 1.8em;
+                font-weight: 600;
+            }
+
+            span {
+                font-size: 0.8em;
+                font-weight: 300;
+            }
+        }
+
+        #super-admin {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .permission-group-list,
+        .permission-group {
+            border-bottom: 1px solid #D8D8D8;
+            padding-bottom: 26px;
+            padding-top: 43px;
+        }
+
+        .permission-group-list {
+
+            div {
+                display: flex;
+                align-items: center;
+                justify-content: start;
+                margin-bottom: 43px;
+                width: fit-content;
+                cursor: pointer;
+            }
+
+            li {
+                list-style: none;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                position: relative;
+                padding-left: 40px;
+                margin-bottom: 11px;
+
+                &::before {
+                    content: "\2022";
+                    position: absolute;
+                    font-weight: bold;
+                    display: inline-block;
+                    width: 6px;
+                    height: 6px;
+                    left: 20px;
+                    top: 0;
+                }
+
+                img {
+                    cursor: pointer;
+                }
+
+            }
+
+            .hidden {
+                display: none;
+            }
+
+            .allowed {
+                &::before {
+                    color: #44A0D3;
+                }
+            }
+
+            .forbidden {
+                &::before {
+                    color: #FF0000;
+                }
+            }
+        }
+
+    }
+}
+
+.inactive {
+    opacity: 38%;
+
+    * {
+        color: #C6C6C6;
+    }
+
+    .edit-form-container {
+        div {
+            input~label {
+                color: #C6C6C6 !important;
+                font-weight: 600;
+            }
+        }
     }
 }
