added create user function

--- a/app/src/components/UserSetup/userSetup.scss
+++ b/app/src/components/UserSetup/userSetup.scss
@@ -269,6 +269,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+
+            img {
+                cursor: pointer;
+            }
         }
 
         .permission-group-list,
