--- a/app/src/components/UserSetup/userSetup.css
+++ b/app/src/components/UserSetup/userSetup.css
@@ -221,6 +221,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.user-setup-container .permissions-section #super-admin img {
+  cursor: pointer;
+}
 .user-setup-container .permissions-section .permission-group-list,
 .user-setup-container .permissions-section .permission-group {
   border-bottom: 1px solid #D8D8D8;
