--- a/app/src/components/NewUserModal/newUserModal.css
+++ b/app/src/components/NewUserModal/newUserModal.css
@@ -74,6 +74,22 @@
 .new-user-form .form-role label {
   left: 50px;
 }
+.new-user-form .form-role .arrow-form-icon {
+  position: absolute;
+  bottom: 12px;
+  left: 250px;
+}
+.new-user-form .form-role .role-select {
+  width: 217px;
+  border: none;
+  border-bottom: 2px solid #C6C6C6;
+  outline: none;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  -webkit-appearance: none;
+  color: #C6C6C6;
+  cursor: pointer;
+}
 .new-user-form .form-email label {
   left: 50px;
 }
