added color to buttons on hover

--- a/app/src/components/DeleteUserModal/deleteUserModal.scss
+++ b/app/src/components/DeleteUserModal/deleteUserModal.scss
@@ -75,4 +75,10 @@
     border: none;
     margin-top: 43px;
     cursor: pointer;
+    font-weight: 600;
+
+    &:hover{
+    background-color: #f57878;
+
+    }
 }
