--- a/app/src/components/DeleteUserModal/deleteUserModal.css
+++ b/app/src/components/DeleteUserModal/deleteUserModal.css
@@ -64,4 +64,8 @@
   border: none;
   margin-top: 43px;
   cursor: pointer;
+  font-weight: 600;
+}
+.delete-user-input:hover {
+  background-color: #f57878;
 }/*# sourceMappingURL=deleteUserModal.css.map */
