--- a/app/src/components/NewUserModal/newUserModal.css
+++ b/app/src/components/NewUserModal/newUserModal.css
@@ -107,6 +107,9 @@
   color: #FFFFFF;
   background-color: #33A3DC;
 }
+.new-user-form .validated-btn:hover {
+  background-color: rgb(47, 148, 199);
+}
 .new-user-form .submit-form-container {
   display: flex;
   justify-content: space-between;
