--- a/app/src/components/UserSetup/userSetup.css
+++ b/app/src/components/UserSetup/userSetup.css
@@ -98,6 +98,9 @@
   font-size: 0.8em;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
 }
+.user-setup-container .photo-section .resend-invite-btn:hover {
+  background-color: #7979da;
+}
 .user-setup-container .details-section {
   width: 332px;
   position: relative;
@@ -182,6 +185,9 @@
   height: 59px;
   font-size: 0.8em;
   font-weight: 600;
+}
+.user-setup-container .details-section .edit-user-form .validated-btn:hover {
+  background-color: rgb(47, 148, 199);
 }
 .user-setup-container .details-section .edit-user-form .edit-form-validation {
   color: #F89797;
