--- a/app/src/components/UserSetup/userSetup.scss
+++ b/app/src/components/UserSetup/userSetup.scss
@@ -110,6 +110,10 @@
             margin-top: 59px;
             font-size: 0.8em;
             box-shadow: 0px 3px 6px #00000029;
+
+            &:hover {
+                background-color: #7979da;
+            }
         }
 
     }
@@ -219,6 +223,10 @@
                 height: 59px;
                 font-size: 0.8em;
                 font-weight: 600;
+
+                &:hover {
+                    background-color: rgb(47, 148, 199)
+                }
             }
 
             
