--- a/app/src/components/UserSetup/userSetup.css
+++ b/app/src/components/UserSetup/userSetup.css
@@ -125,7 +125,8 @@
 }
 .user-setup-container .details-section .edit-user-form {
   margin-top: 69px;
-  margin-left: 53px;
+  width: 326px;
+  margin-left: 30px;
 }
 .user-setup-container .details-section .edit-user-form input {
   border: none;
@@ -155,14 +156,18 @@
   position: relative;
   padding-left: 20px;
 }
+.user-setup-container .details-section .edit-user-form .edit-form-container div input {
+  font-weight: 300;
+}
 .user-setup-container .details-section .edit-user-form .edit-form-container label {
-  font-size: 0.8em;
+  font-size: 0.6em;
   position: absolute;
   top: 0;
   left: 0;
   color: #C6C6C6;
   cursor: text;
   height: 1px;
+  font-weight: 600;
 }
 .user-setup-container .details-section .edit-user-form .send-edit-input {
   color: #979797;
@@ -198,6 +203,30 @@
 }
 .user-setup-container .details-section .edit-user-form .validated {
   color: #44D36A;
+}
+.user-setup-container .details-section #form-role-label {
+  color: #33A3DC;
+  top: -25px;
+  left: 0;
+}
+.user-setup-container .details-section .role-select {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #C6C6C6;
+  outline: none;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  -webkit-appearance: none;
+  cursor: pointer;
+  font-weight: 300;
+}
+.user-setup-container .details-section .arrow-form-icon {
+  position: absolute;
+  bottom: 12px;
+  right: 2px;
+  cursor: pointer;
+  z-index: -1;
 }
 .user-setup-container .submit-edit-form-container {
   display: flex;
