--- a/app/src/components/Header/header.css
+++ b/app/src/components/Header/header.css
@@ -29,6 +29,7 @@
   font-size: 1em;
   outline: none;
   font-style: italic;
+  width: 100%;
 }
 .header-container .search-icon {
   position: absolute;
